<resources>
    <string name="app_name">Lab_02</string>

    <string name="hello_world">Temperature Convertor</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter temperature</string>
    <color name="myColor">#F5F5F5</color>
    <string name="celsius">to Celsius</string>
    <string name="fahrenheit">to Fahrenheit</string>
    <string name="calc">Calculate</string>

</resources>
